# hackerFinder9000

./: .gitignore  CLAUDE.md  README.md  benign_baseline_650.csv  data_validation.ipynb  docker-compose.yaml  lambda_launch.sh  look.sh  mcp_client_task_set_500.csv  pyproject.toml  secrets.env  sync_from_local.sh  test1.sh  test2.sh
llamaguard/: env.sh  guard.py  runner.sh
scripts/: breed_threats.py  evolve_threats.py  swarm_evolve.py
src/: main.py
src/detection/: attack_genes.py  fingerprint.py
src/middelwares/: request_logging.py
