[project]
name = "opensafety-ai"
version = "0.4.0"
description = "OpenSafety AI Corporation of America - Defensive AI gateway with ML-powered threat detection, attack gene evolution, and autonomous threat discovery"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "OpenSafety AI Team", email = "team@opensafety.ai" },
]
maintainers = [
    { name = "OpenSafety AI Team", email = "team@opensafety.ai" },
]
keywords = [
    "ai-safety",
    "llm-security",
    "prompt-injection",
    "jailbreak-detection",
    "threat-detection",
    "ml-classifier",
    "openai-compatible",
    "fastapi",
    "gateway",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "requests>=2.32.4",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
# ML training dependencies
ml = [
    "scikit-learn>=1.4.0",
    "torch>=2.0.0",
    "safetensors>=0.4.0",
    "transformers>=4.36.0",
]
# Full installation with all extras
all = [
    "opensafety-ai[ml]",
]

[project.scripts]
opensafety = "main:run_server"
opensafety-train = "train_full_spectrum:main"
opensafety-discover = "detection.threat_ontology:run_cli_discovery"

[project.urls]
Homepage = "https://opensafety.ai"
Documentation = "https://docs.opensafety.ai"
Repository = "https://github.com/opensafety-ai/opensafety-gateway"
Issues = "https://github.com/opensafety-ai/opensafety-gateway/issues"
Changelog = "https://github.com/opensafety-ai/opensafety-gateway/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "commitizen>=3.27.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
    "ipython>=8.0.0",
]
test = [
    "ruff>=0.7.4",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "torch>=2.0.0",
    "safetensors>=0.4.0",
    "transformers>=4.36.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ml: marks tests that require ML dependencies",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/train_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 70

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI uses this)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "ARG001", # unused function argument (common in FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR"]
"src/detection/attack_genes.py" = ["E501"]  # Long attack patterns
"src/detection/threat_ontology.py" = ["E501"]  # Long pattern strings

[tool.ruff.lint.isort]
known-first-party = ["detection", "models", "middelwares", "utils"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
